// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api cloudProviderSecrets should create a cloudProvider dns secret 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/api/v1/namespaces/garden-foo/secrets",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    Object {
      "apiVersion": "v1",
      "data": Object {
        "key": "bXlLZXk=",
        "secret": "bXlTZWNyZXQ=",
      },
      "kind": "Secret",
      "metadata": Object {
        "name": "new-dns1",
        "namespace": "garden-foo",
      },
      "type": "Opaque",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    Object {
      "apiVersion": "core.gardener.cloud/v1beta1",
      "kind": "SecretBinding",
      "metadata": Object {
        "labels": Object {
          "gardener.cloud/dnsProviderName": "foo-dns",
        },
        "name": "new-dns1",
        "namespace": "garden-foo",
      },
      "provider": Object {
        "type": "foo-dns",
      },
      "secretRef": Object {
        "name": "new-dns1",
        "namespace": "garden-foo",
      },
    },
  ],
]
`;

exports[`api cloudProviderSecrets should create a cloudProvider dns secret 2`] = `
Object {
  "data": Object {
    "key": "****************",
    "secret": "****************",
  },
  "metadata": Object {
    "dnsProviderName": "foo-dns",
    "hasCostObject": true,
    "name": "new-dns1",
    "namespace": "garden-foo",
    "projectName": "foo",
    "resourceVersion": "42",
    "secretRef": Object {
      "name": "new-dns1",
      "namespace": "garden-foo",
    },
  },
  "quotas": Array [],
}
`;

exports[`api cloudProviderSecrets should create a cloudProvider infrastructure secret 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/api/v1/namespaces/garden-foo/secrets",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    Object {
      "apiVersion": "v1",
      "data": Object {
        "key": "bXlLZXk=",
        "secret": "bXlTZWNyZXQ=",
      },
      "kind": "Secret",
      "metadata": Object {
        "name": "new-infra1",
        "namespace": "garden-foo",
      },
      "type": "Opaque",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    Object {
      "apiVersion": "core.gardener.cloud/v1beta1",
      "kind": "SecretBinding",
      "metadata": Object {
        "labels": Object {
          "cloudprofile.garden.sapcloud.io/name": "infra3-profileName",
        },
        "name": "new-infra1",
        "namespace": "garden-foo",
      },
      "provider": Object {
        "type": "infra1",
      },
      "secretRef": Object {
        "name": "new-infra1",
        "namespace": "garden-foo",
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "name": "infra3-profileName",
          "resource": "cloudprofiles",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api cloudProviderSecrets should create a cloudProvider infrastructure secret 2`] = `
Object {
  "data": Object {
    "key": "****************",
    "secret": "****************",
  },
  "metadata": Object {
    "cloudProfileName": "infra3-profileName",
    "cloudProviderKind": "infra3",
    "hasCostObject": true,
    "name": "new-infra1",
    "namespace": "garden-foo",
    "projectName": "foo",
    "resourceVersion": "42",
    "secretRef": Object {
      "name": "new-infra1",
      "namespace": "garden-foo",
    },
  },
  "quotas": Array [],
}
`;

exports[`api cloudProviderSecrets should delete an own cloudProvider secret 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra3",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra3",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret2",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudProviderSecrets should delete an own cloudProvider secret 2`] = `
Object {
  "metadata": Object {
    "name": "foo-infra3",
    "namespace": "garden-foo",
    "secretRef": Object {
      "name": "secret2",
      "namespace": "garden-foo",
    },
  },
}
`;

exports[`api cloudProviderSecrets should not delete a shared cloudProvider secret 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/trial-infra1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudProviderSecrets should not delete a shared cloudProvider secret 2`] = `
Object {
  "code": 422,
  "details": Any<Object>,
  "message": "Remove allowed only for secrets in own namespace",
  "reason": "Unprocessable Entity",
  "status": "Failure",
}
`;

exports[`api cloudProviderSecrets should not delete cloudProvider secret if referenced by shoot 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api cloudProviderSecrets should not delete cloudProvider secret if referenced by shoot 2`] = `
Object {
  "code": 422,
  "details": Any<Object>,
  "message": "Only secrets not referened by any shoot can be deleted",
  "reason": "Unprocessable Entity",
  "status": "Failure",
}
`;

exports[`api cloudProviderSecrets should not patch a shared cloudProvider secret 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/trial-infra1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudProviderSecrets should not patch a shared cloudProvider secret 2`] = `
Object {
  "code": 422,
  "details": Any<Object>,
  "message": "Patch allowed only for secrets in own namespace",
  "reason": "Unprocessable Entity",
  "status": "Failure",
}
`;

exports[`api cloudProviderSecrets should patch an own cloudProvider secret 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra3",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret2",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
      "content-type": "application/json-patch+json",
    },
    Array [
      Object {
        "op": "replace",
        "path": "/data",
        "value": Object {
          "key": "bXlLZXk=",
          "secret": "bXlTZWNyZXQ=",
        },
      },
    ],
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "name": "infra3-profileName",
          "resource": "cloudprofiles",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api cloudProviderSecrets should patch an own cloudProvider secret 2`] = `
Object {
  "data": Object {},
  "metadata": Object {
    "cloudProfileName": "infra3-profileName",
    "cloudProviderKind": "infra3",
    "hasCostObject": true,
    "name": "foo-infra3",
    "namespace": "garden-foo",
    "projectName": "foo",
    "secretRef": Object {
      "name": "secret2",
      "namespace": "garden-foo",
    },
  },
  "quotas": Array [
    Object {
      "metadata": Object {
        "name": "foo-quota1",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": Object {
        "clusterLifetimeDays": 14,
        "metrics": Object {
          "cpu": "200",
        },
        "scope": Object {
          "apiVersion": "v1",
          "kind": "Secret",
        },
      },
    },
    Object {
      "metadata": Object {
        "name": "foo-quota2",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": Object {
        "clusterLifetimeDays": 14,
        "metrics": Object {
          "cpu": "200",
        },
        "scope": Object {
          "apiVersion": "v1",
          "kind": "Secret",
        },
      },
    },
  ],
}
`;

exports[`api cloudProviderSecrets should return no cloudProvider secrets 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "resource": "cloudprofiles",
          "verb": "list",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-baz/secrets?labelSelector=reference.gardener.cloud%2Fsecretbinding%3Dtrue",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-baz/secretbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudProviderSecrets should return no cloudProvider secrets 2`] = `Array []`;

exports[`api cloudProviderSecrets should return three cloudProvider secrets 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "resource": "cloudprofiles",
          "verb": "list",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets?labelSelector=reference.gardener.cloud%2Fsecretbinding%3Dtrue",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudProviderSecrets should return three cloudProvider secrets 2`] = `
Array [
  Object {
    "data": Object {
      "key": "****************",
      "secret": "****************",
    },
    "metadata": Object {
      "cloudProfileName": "infra1-profileName",
      "cloudProviderKind": "infra1",
      "hasCostObject": true,
      "name": "foo-infra1",
      "namespace": "garden-foo",
      "projectName": "foo",
      "secretRef": Object {
        "name": "secret1",
        "namespace": "garden-foo",
      },
    },
    "quotas": Array [
      Object {
        "metadata": Object {
          "name": "foo-quota1",
          "namespace": "garden-foo",
          "uid": 2,
        },
        "spec": Object {
          "clusterLifetimeDays": 14,
          "metrics": Object {
            "cpu": "200",
          },
          "scope": Object {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
      Object {
        "metadata": Object {
          "name": "foo-quota2",
          "namespace": "garden-foo",
          "uid": 3,
        },
        "spec": Object {
          "clusterLifetimeDays": 14,
          "metrics": Object {
            "cpu": "200",
          },
          "scope": Object {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
    ],
  },
  Object {
    "data": Object {
      "key": "****************",
      "secret": "****************",
    },
    "metadata": Object {
      "cloudProfileName": "infra3-profileName",
      "cloudProviderKind": "infra3",
      "hasCostObject": true,
      "name": "foo-infra3",
      "namespace": "garden-foo",
      "projectName": "foo",
      "secretRef": Object {
        "name": "secret2",
        "namespace": "garden-foo",
      },
    },
    "quotas": Array [
      Object {
        "metadata": Object {
          "name": "foo-quota1",
          "namespace": "garden-foo",
          "uid": 2,
        },
        "spec": Object {
          "clusterLifetimeDays": 14,
          "metrics": Object {
            "cpu": "200",
          },
          "scope": Object {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
      Object {
        "metadata": Object {
          "name": "foo-quota2",
          "namespace": "garden-foo",
          "uid": 3,
        },
        "spec": Object {
          "clusterLifetimeDays": 14,
          "metrics": Object {
            "cpu": "200",
          },
          "scope": Object {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
    ],
  },
  Object {
    "metadata": Object {
      "cloudProfileName": "infra1-profileName",
      "cloudProviderKind": "infra1",
      "hasCostObject": true,
      "name": "trial-infra1",
      "namespace": "garden-foo",
      "projectName": "trial",
      "secretRef": Object {
        "name": "trial-secret",
        "namespace": "garden-trial",
      },
    },
    "quotas": Array [
      Object {
        "metadata": Object {
          "name": "foo-quota1",
          "namespace": "garden-foo",
          "uid": 2,
        },
        "spec": Object {
          "clusterLifetimeDays": 14,
          "metrics": Object {
            "cpu": "200",
          },
          "scope": Object {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
      Object {
        "metadata": Object {
          "name": "foo-quota2",
          "namespace": "garden-foo",
          "uid": 3,
        },
        "spec": Object {
          "clusterLifetimeDays": 14,
          "metrics": Object {
            "cpu": "200",
          },
          "scope": Object {
            "apiVersion": "v1",
            "kind": "Secret",
          },
        },
      },
    ],
  },
]
`;
